--- a/_css/spectre-overrides.css
+++ b/_css/spectre-overrides.css
@@ -3,10 +3,12 @@
   --background: hsl(0, 0%, 100%);
   --block-background: hsl(0, 0%, 96%);
   --output-background: hsl(0, 0%, 98%);
+  $primary-color: #1D7384;
+  $secondary-color: #A9DDE7;
 }
 
 body {
-    font-size: 0.1rem;
+    font-size: 1rem;
 }
 
 .docs-brand {
