--- a/_css/spectre-overrides.css
+++ b/_css/spectre-overrides.css
@@ -3,10 +3,11 @@
   --background: hsl(0, 0%, 100%);
   --block-background: hsl(0, 0%, 96%);
   --output-background: hsl(0, 0%, 98%);
-  --primary: #1D7384;
 }
 
-
+.theme-colors {
+    primary: #ffd800;
+}
 
 body {
     font-size: 1rem;
