--- a/_layout/menu.html
+++ b/_layout/menu.html
@@ -5,19 +5,20 @@
 <div id="sidebar" class="docs-sidebar off-canvas-sidebar">
 
 <div class="docs-brand">
-    <h5><a href="/">Julia Tutorials Template</a></h5>
+    <h5><a href="/">Aschreyju</a></h5>
 </div>
 
 <div class="docs-nav">
 <div class="accordion-container">
   <ul class="menu menu-nav">
-    <div class="menu-header">Using this template</div>
+    <div class="menu-header">About</div>
     {{menuitem "getting-started" "Getting started"}}
     <br/>
     <div class="menu-header">Example Pluto tutorials</div>
     {{menuitem "tutorials/linear-model" "Linear model"}}
     {{menuitem "tutorials/ode" "Harmonic oscillator"}}
     {{menuitem "tutorials/benchmarking" "Benchmarking"}}
+    {{menuitem "tutorials/DunningKrugerRandom" "Dunning Kruger"}}
   </ul>
 </div>
 </div>
